- Signed URLs can be generated for GET and PUT HTTP requests, and will correctly encode object key 
  names with special characters.
- DNS caching is limited to 300 seconds.
- When an object's data comes from a file, the file can be opened only when necessary rather than 
  being opened as soon as the object is created.
  
  * REST/HTTP implementation
  
- Requests that fail due to S3 Internal Server error are retried a configurable number of times,
  with an increasing delay between each retry attempt.
- The REST/HTTP implementation is now less fussy about object key names, and will allow unusual 
  names such as full URL strings etc.
- Can detect (in some circumstances) a browser's proxy settings when run inside an applet context,
  and allows for callbacks to a credentials provider object when authentication is required
  (eg for proxies requiring username/password)
- Added a utility method putObjectWithSignedUrl to upload objects to S3 using only a signed 
  PUT URL (ie no AWS credentials are required).
- Configurable user agent string.
- Sends an upload object's MD5 data hash to S3 in the header Content-MD5, to confirm no data 
  corruption has taken place on the wire.

  * SOAP implementation

- Tests for data corruption on the wire by matching ETag returned by S3 with 
  expected MD5 hash value.

UPLOADER

A new application to allow third parties without AWS accounts or credentials to upload files
to an S3 account.


COCKPIT

- Remembered login credentials are automatically updated to the new PBE-based encryption files.
- Third-party buckets can be added without first logging in.
- User can cancel the listing of objects in large buckets.
- Files being sent to s3 are only opened when necessary, removing the potential for too many files
  to be open at once (exceeding an Operating System imposed limit).

SYNCHONIZE

- Files being sent to s3 are only opened when necessary, removing the potential for too many files