@@ -7,11 +7,12 @@
 <body bgcolor="#FFFFFF" text="#000000">
 
 <center>
-	<a href="index.html">Home</a> | 
+	<a href="index.html"><b>Home</b></a> | 
 	<a href="cockpit.html">Cockpit</a> | 
 	<a href="synchronize.html">Synchronize</a> | 
-	<a href="start.html">Toolkit Guide</a>
-	| <a href="downloads.html"><b>Downloads</b></a>
+	<a href="start.html">Toolkit Guide</a> |
+	<a href="advanced.html">Advanced options</a> | 
+	| <a href="downloads.html">Downloads</a>
 </center>
 
 <center><h1>Downloads</h1></center>
