@@ -10,7 +10,8 @@
 	<a href="index.html"><b>Home</b></a> | 
 	<a href="cockpit.html">Cockpit</a> | 
 	<a href="synchronize.html">Synchronize</a> | 
-	<a href="start.html">Toolkit Guide</a>
+	<a href="start.html">Toolkit Guide</a> |
+	<a href="advanced.html">Advanced options</a> | 
 	| <a href="downloads.html">Downloads</a>
 </center>
 
